# freeverb

./: README.md
freeverb-external/source/freeverb~/: CMakeLists.txt
freeverb~.mxo/Contents/: Info.plist
freeverb~.mxo/Contents/MacOS/: freeverb~
